--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
-
+    </dependencies>
   <build>
   <plugins>
   		<plugin>
